--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
-    "name": "mcuadros/silex-hateoas",
-    "homepage": "http://github.com/mcuadros/silex-hateoas",
-    "type": "library",
+    "name": "level3/demo",
+    "homepage": "http://github.com/level3php/demo",
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
@@ -13,7 +12,7 @@
         "level3/silex": "*"
     },
     "require-dev": {
-        "behat/behat": "2.5.*@dev"
+        "level3/behat": "*"
     },
     "autoload": {
         "psr-0": {
