--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,15 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
+        "ext-redis": "*",
         "silex/silex": "1.0.*@dev",
         "dflydev/doctrine-orm-service-provider": "1.0.*@dev",
         "dflydev/psr0-resource-locator-service-provider": "1.0.*@dev",
         "cilex/console-service-provider": "*",
-        "level3/silex": "*"
+        "level3/silex": "*",
+        "level3/level3": "*"
     },
     "require-dev": {
-        "level3/level3": "*",
         "level3/behat": "*"
     },
     "autoload": {
