--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ php:
 before_script:
   - phpenv rehash
   - composer --no-interaction --prefer-source --dev install
+  - /bin/bash ./.travis.sh
   # webserver setup
   - php -S localhost:9091 web/index.php &
   - sleep 3
